--- a/assets/css/profile.css
+++ b/assets/css/profile.css
@@ -119,9 +119,83 @@ body {
     font-weight: bold;
 }
 
-.order-box {
-    background-color: #e0e7ff;
-    border-radius: 5px;
-    height: 40px;
+.input-group.password {
+    position: relative;
+    margin-bottom: 10px; 
+}
+
+.password-wrapper {
+    position: relative;
+    width: 100%;
+}
+
+.password-wrapper input[type="password"],
+.password-wrapper input[type="text"] {
+    width: 100%;
+    padding: 10px;
+    padding-right: 20px; 
+    box-sizing: border-box;
+}
+
+#toggle-password-icon {
+    position: absolute;
+    right: 10px; 
+    top: 71%;
+    transform: translateY(-50%); 
+    cursor: pointer;
+}
+
+#toggle-password-icon svg {
+    width: 20px;
+    height: 20px;
+}
+.order-section {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    margin: 20px 0;
+}
+
+.order-column {
+    width: 48%; 
+    padding: 20px;
+    border-radius: 8px;
+    box-sizing: border-box; 
+    display: flex;
+    flex-direction: column;
+}
+
+.order-column h4 {
+    font-size: 1.5rem;
     margin-bottom: 10px;
 }
+
+.order-box {
+    padding: 15px;
+    margin-bottom: 15px;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    flex: 0 0 auto; 
+}
+
+.order-box p {
+    font-size: 1rem;
+    margin: 5px 0;
+}
+
+.order-box p:first-child {
+    font-weight: bold;
+    color: #007bff; 
+}
+
+.order-box p:last-child {
+    font-weight: bold;
+    color: #28a745; 
+}
+
+.order-column p {
+    text-align: center;
+    font-style: italic;
+}
+
+
